Dodanie działającej konteneryzacji

--- a/src/uwsgi/uwsgi.ini
+++ b/src/uwsgi/uwsgi.ini
@@ -1,11 +1,10 @@
 [uwsgi]
-protocol = http
-module = start
+protocol = uwsgi
+plugins = python
+module = wsgi
 callable = app
 uid = nobody
 gid = nobody
 master = true
 processes = 5
-socket = localhost:5000
-vacuum = true
-die-on-term = true
+socket = :5000
