--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,13 +2,18 @@ version: '3'
 
 services:
   nginx:
-    build: ./src/nginx/Dockerfile
+    build:
+      context: .
+      dockerfile: ./src/nginx/Dockerfile
 #    image: nginx:latest
     ports:
       - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+
   uwsgi:
-    build: ./src/uwsgi/Dockerfile
+    build:
+      context: .
+      dockerfile: ./src/uwsgi/Dockerfile
+    ports:
+      - "5000:5000"
     volumes:
       - ./src/uwsgi/app:/var/www/app
