--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,17 @@
 events {
   worker_connections  4096;  ## Default: 1024
 }
-
+error_log /var/log/nginx/error.log;
 http {
+
     server {
         listen 80;
+        server_name ochrona;
         root         /usr/share/nginx/html;
 
         location / {
-            include uwsgi_params;
-            uwsgi_pass localhost:5000;
+            include /etc/nginx/uwsgi_params;
+            uwsgi_pass uwsgi:5000;
         }
     }
 }
