Dodanie połączenia szyfrowanego

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,5 +1,5 @@
 events {
-  worker_connections  4096;  ## Default: 1024
+  worker_connections  4096;
 }
 error_log /var/log/nginx/error.log;
 http {
@@ -7,6 +7,19 @@ http {
     server {
         listen 80;
         server_name ochrona;
+        root         /usr/share/nginx/html;
+
+        location / {
+            include /etc/nginx/uwsgi_params;
+            uwsgi_pass uwsgi:5000;
+        }
+    }
+
+    server {
+        listen 443 ssl;
+        server_name ochrona;
+        ssl_certificate     /etc/nginx/ca.crt;
+        ssl_certificate_key /etc/nginx/ca.key;
         root         /usr/share/nginx/html;
 
         location / {
