--- a/src/nginx/nginx.conf
+++ b/src/nginx/nginx.conf
@@ -1,10 +1,20 @@
 events {
-  worker_connections  4096;  ## Default: 1024
+  worker_connections  4096;
 }
-
+error_log /var/log/nginx/error.log;
 http {
+
     server {
-        listen 80;
+        listen 443 ssl;
+        server_name ochrona;
+        ssl_certificate     /etc/nginx/ca.crt;
+        ssl_certificate_key /etc/nginx/ca.key;
         root         /usr/share/nginx/html;
+
+        location / {
+            include /etc/nginx/uwsgi_params;
+            uwsgi_pass uwsgi:5000;
+        }
     }
+
 }
