--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,7 @@ services:
     build:
       context: .
       dockerfile: ./src/nginx/Dockerfile
-#    image: nginx:latest
     ports:
-      - "80:80"
       - "443:443"
 
   uwsgi:
@@ -18,3 +16,11 @@ services:
       - "5000:5000"
     volumes:
       - ./src/uwsgi/app:/var/www/app
+    environment:
+      - 'MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD'
+  db:
+    image: mariadb
+    logging:
+      driver: none
+    environment:
+      - 'MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD'
