Dodanie strony startowej

--- a/src/nginx/nginx.conf
+++ b/src/nginx/nginx.conf
@@ -3,6 +3,8 @@ events {
 }
 error_log /var/log/nginx/error.log;
 http {
+    include /etc/nginx/mime.types;
+    include /etc/nginx/conf.d/*.conf;
 
     server {
         listen 443 ssl;
