--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,6 @@ services:
       dockerfile: ./src/nginx/Dockerfile
     ports:
       - "443:443"
-
   uwsgi:
     build:
       context: .
@@ -18,6 +17,7 @@ services:
       - ./src/uwsgi/app:/var/www/app
     environment:
       - 'MYSQL_ROOT_PASSWORD=$MYSQL_ROOT_PASSWORD'
+      - 'PEPPER:$PEPPER'
   db:
     image: mariadb
     logging:
