--- a/src/nginx/nginx.conf
+++ b/src/nginx/nginx.conf
@@ -5,6 +5,7 @@ error_log /var/log/nginx/error.log;
 http {
     include /etc/nginx/mime.types;
     include /etc/nginx/conf.d/*.conf;
+    limit_req_zone $binary_remote_addr zone=one:10m rate=1r/s;
 
     server {
         listen 443 ssl;
@@ -12,6 +13,8 @@ http {
         ssl_certificate     /etc/nginx/ca.crt;
         ssl_certificate_key /etc/nginx/ca.key;
         root         /usr/share/nginx/html;
+
+        limit_req zone=one burst=5;
 
         location / {
             include /etc/nginx/uwsgi_params;
