Dodanie monitorowania adresow na ktorych jestesmy zalogowani

--- a/src/uwsgi/uwsgi.ini
+++ b/src/uwsgi/uwsgi.ini
@@ -3,8 +3,8 @@ protocol = uwsgi
 plugins = python
 module = wsgi
 callable = app
-uid = nobody
-gid = nobody
+uid = pyuser
+gid = pyuser
 master = true
 processes = 5
 socket = :5000
