Dodanie mechanizmu generowania tokenow do resetu hasła

--- a/src/uwsgi/uwsgi.ini
+++ b/src/uwsgi/uwsgi.ini
@@ -3,8 +3,8 @@ protocol = uwsgi
 plugins = python
 module = wsgi
 callable = app
-uid = pyuser
-gid = pyuser
+uid = nobody
+gid = nobody
 master = true
 processes = 5
 socket = :5000
