Dodanie CSP oraz skryptu do strony odzyskiwania hasla

--- a/src/nginx/nginx.conf
+++ b/src/nginx/nginx.conf
@@ -21,7 +21,9 @@ http {
             uwsgi_pass uwsgi:5000;
         }
 
-
+        location /login {
+            limit_req zone=one burst=5;
+        }
 
     }
 
