Dodanie wyswietlania informacji o nowym zalogowaniu

--- a/src/nginx/nginx.conf
+++ b/src/nginx/nginx.conf
@@ -25,6 +25,10 @@ http {
             limit_req zone=one burst=5;
         }
 
+        location /password {
+            limit_req zone=one burst=5;
+        }
+
     }
 
 }
