Poprawienie konfiguracji nginx

--- a/src/nginx/nginx.conf
+++ b/src/nginx/nginx.conf
@@ -23,12 +23,9 @@ http {
 
         location /login {
             limit_req zone=one burst=5;
+            include /etc/nginx/uwsgi_params;
+            uwsgi_pass uwsgi:5000;
         }
-
-        location /password {
-            limit_req zone=one burst=5;
-        }
-
     }
 
 }
